# costpilot

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/api/: alerts.py  analytics.py  api_keys.py  auth.py  budgets.py  events.py  ingest.py  members.py  projects.py  recommendations.py  router.py
backend/app/models/: __init__.py  alert.py  api_key.py  budget.py  event.py  project.py  project_member.py  user.py
backend/app/schemas/: alert.py  analytics.py  api_key.py  budget.py  event.py  project.py  recommendation.py  user.py
backend/app/services/: analytics_service.py  auth_service.py  budget_service.py  forecast_service.py  ingest_service.py  llm_service.py  project_service.py  recommendation_service.py
backend/tests/: conftest.py  test_analytics.py  test_api_keys.py  test_auth.py  test_budgets.py  test_forecast.py  test_ingest.py  test_recommendations.py
docs/: GITHUB_SEO.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: index.css  main.tsx  router.tsx
scripts/: create_superuser.py  generate_sample_data.py  seed.py
sdk/python/: README.md  pyproject.toml
sdk/python/src/costpilot/: __init__.py  _state.py  client.py  models.py  pricing.py  queue.py  wrappers.py
sdk/python/tests/: test_client.py  test_pricing.py  test_queue.py  test_wrappers.py
(+55 files in other folders)
