[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "costpilot"
version = "0.1.0"
description = "Lightweight LLM cost tracking SDK — 3 lines of code to track all your AI spending"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Aryan Sharma"}]
keywords = ["llm", "cost", "tracking", "openai", "anthropic", "monitoring", "analytics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["httpx>=0.27.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-cov>=5.0.0"]

[project.urls]
Homepage = "https://github.com/aryanjp1/costpilot"
Repository = "https://github.com/aryanjp1/costpilot"

[tool.hatch.build.targets.wheel]
packages = ["src/costpilot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
